--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ packages = [
 ]
 
 [tool.poetry.scripts]
-shelly-influx = "run:main"
+shelly-influx = "src.run:main"
 
 [tool.poetry.dependencies]
 python = "^3.13"
@@ -56,6 +56,7 @@ sphinx-rtd-theme = "^3.0.2"
 twine = "^6.1.0"
 wcwidth = "^0.2.13"
 python-dotenv = "^1.0.1"
+ipython = "^9.3.0"
 
 [build-system]
 requires = ["poetry-core"]
@@ -103,9 +104,9 @@ init_typed = true
 isort = {cmd = "isort src tests", help = "Sort imports"}
 black = {cmd = "black -l 120 src tests", help = "Format source code"}
 format = {sequence = ["isort", "black"], help = "Format source code & sort imports"}
-lint = {cmd = "flake8 --max-cognitive-complexity=15 src", help = "Lint and complexity score for source code"}
+lint = {cmd = "flake8 --max-cognitive-complexity=20 src", help = "Lint and complexity score for source code"}
 mypy = {cmd = "mypy src", help = "Type check code"}
 test = {cmd = "pytest --cov=src --cov-config=pyproject.toml", help = "Run test suite"}
 docs = {cmd = "sphinx-build docs docs/_build", help = "Build documentation"}
-precommit = {sequence = ["format", "lint", "mypy", "test", "docs"], help = "Prepare for commit"}
+precommit = {sequence = ["format", "lint", "mypy"], help = "Prepare for commit"}
 tag = { shell = "git tag -a `poetry version -s` -m v`poetry version -s`", help = "Create git tag for current version" }
